<resources>
    <string name="app_name">Kumbh Darshan</string>
    <string name="button">Button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="num">+915322500775</string>
    <string name="add">Kumbh Mela Adhikari Triveni Bhawan, Veni Bandh Daraganj,Prayagraj, Allahabad Uttar Pradesh</string>
    <string name="call">Call</string>
    <string name="email">web.kumbh-up@gov.in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Kumbh">Kumbh Mela Contact</string>
    <string name="phone">Phone</string>
    <string name="emai">Email</string>
    <string name="num1">+915322504011</string>
    <string name="emercon">Emergency Contact</string>
    <string name="fire">Fire :  101</string>
    <string name="ambu">Ambulance : 102</string>
    <string name="police">Police : 100</string>
    <string name="disaster">Disaster Emergencies : 108</string>
    <string name="About_dep1_dep2_dep3">   Kumbh Mela ::
    Devlopers:
                                                Abhijeet Biswas
                                                Shrikant Pattawi
                                                  Satish Kumar</string>
    <string name="ques1"><b>1. How to Attend the Kumbh Mela ? </b>\n\n  From a tourist perspective, the Kumbh Mela is an unforgettable -- and daunting -- experience! The sheer number of people there can be off-putting. However, dedicated arrangements are made, especially foreigners. Special tourist camps are set up, providing luxury tents with attached bathrooms, guides, and assistance for excursions. Tight security is also in place.</string>
    <string name="ques4"><b>4. Which are the Nearest Airport for coming to Allahabad Kumbh?</b> \n\n Nearest international airport is Varanasi Airport/Lucknow Airport.  Domestic airport is \'Allahabad Airport\' 20 Km far from Kumbh Area.</string>
    <string name="ques3"><b>3. Which is the perfect time for attaining Kumbh?</b>\n \n  Suggest the best date accordingly. If you wish to attaimn main event than Shahi Snan is the best time but if you will attain any of Shahi Snan you have to stay atleat 04 night because during Shahi Snan all the road will be block 02 day before and it will re open 01 day after of Shahi Snan day.</string>
    <string name="ques2"><b>2. This is Ardh Kumbh then why you are calling it Kumbh?</b>\n \n  Government declared name Kumbh, (Speaking after the release of the Kumbh 2019\'s logo, the chief minister said: , the word \'Ardh\' doesnt gel with the philosophy. So, we would be dropping the word \'Ardh\' and celebrate Kumbh 2019).</string>
    <string name="svbh">SVBH</string>
    <string name="svb">Address: Barrister Mullah Colony, MNNIT Allahabad Campus, Teliarganj, Allahabad, Uttar Pradesh 211002 \n Phone: 084002 57377</string>
    <string name="makarsakranti"><b>MAKAR SAKARANTI </b> \n<b>15 JAN,2019 TUESDAY</b> \nThis day marks the entry of the sun in its next astronomical  position as per the Hindu calendar. This day marks the beginning of donations at Kumbh Mela. It is customary for pilgrims to donate as per their will</string>
    <string name="paushpoornima"><b>PAUSH POORNIMA \n21 Jan,2019 MONDAY</b>\nPaush Poornima is the 15th day in the month of the Shukla PAksh of the Hindu calendar month Paush.Poornima signifies the rise of full moon. The Kumbh Mela's unofficial beginning is marked by this day. This day also marks the beginning of Kalpvasa.</string>
    <string name="basantpanchami"><b>BASANT PANCHAMI \n10 Feb,2019 SUNDAY</b>\nThis day is indicative of changing in seasons and marks the arrival of Goddess of knowledge
    Sarswati as per Hindu mythology .Kalpavasis wear yellow coloured clothes this day to mark the importance of Basant Panchami.</string>
    <string name="maghipoornima"><b>MAGHI POORNIMA \n19 Feb,2019 TUESDAY</b>\nThis day is known for its association with the worship of Guru Brahaspati and the belief that Hindu
    God Gandharav travel from heaven to Sangam.This day sees a surge in pilgrims at the holy ghats owing to belief that they will
    be guided to heaven in their humanly form.</string>
    <string name="mahashivratri"><b>MAHASHIVRATRI \n04 Mar,2019 MONDAY</b>\nThis day is symbolic of the last holy bath of the Kalpvasis and is directly related to Lord Shanker
    .As per mythology,this is awaited in the heaven as well.</string>
    <string name="mauniamavasaya"><b>MAUNI AMAVASYA\n04 Feb,2019 MONDAY</b>\nIt is widely believed that on this data the planetry positions are most favourable for bathing
        in the holy river,It is of significant to note that the Rishabh Dev who is considered the first sage, broke his long vow of
        silence on this day and bathed in the holy waters at Sangam.This day observe the maximum number of pilgrims in the Mela Area.
    </string>
</resources>
