<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contacts">

    <!-- TODO: Update blank fragment layout -->

    <!-- TextView for a hard-coded phone number  -->

    <!-- The dialNumber() method will be called by this button.  -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/Kumbh"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginStart="115dp"
        android:text="@string/num"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_above="@+id/button6"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="-138dp"
        android:text="@string/phone"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:background="@color/white"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/button6"
        android:background="@color/white"
        android:text="@string/emai"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/add"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/button7"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button4"
        android:layout_marginEnd="11dp"
        android:background="@color/white"
        android:text="@string/num1"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/emercon"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />


    <Button
        android:id="@+id/button8"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="187dp"
        android:background="@color/white"
        android:text="@string/fire"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        tools:layout_editor_absoluteX="12dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:background="@color/white"
        android:text="@string/ambu"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="230dp"
        android:background="@color/white"
        android:text="@string/police"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:background="@color/white"
        android:text="@string/disaster"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="372dp" />

</RelativeLayout>