<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_sc">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/makarsakranti"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/makarsankranti" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card1"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/paushpurnima" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/paushpoornima"
                        android:textColor="#ffffff" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card2"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/mauni" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/mauniamavasaya"
                        android:textColor="#ffffff" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card3"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/basant" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/basantpanchami"
                        android:textColor="#ffffff" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/card5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card4"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/maghi" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/maghipoornima"
                        android:textColor="#ffffff" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/card6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card5"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_margin="2dp"
                        android:src="@drawable/mahashivratri" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="141dp"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="@string/mahashivratri"
                        android:textColor="#ffffff" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>